Made many small changes to all of the source. Beginning to clean up the code.

--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,11 @@
             <version>7.0.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.angeschossen</groupId>
+            <artifactId>LandsAPI</artifactId>
+            <version>5.15.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
