Added Uptime Command for convienience.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -181,3 +181,6 @@ commands:
   mute:
     description: Mute player
     permission: eoncommands.mute
+  uptime:
+    description: Gets the server uptime in a friendly manner
+    permission: eoncommands.uptime
