--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -34,7 +34,7 @@ jobs:
         run: mvn -B package -f pom.xml
       
       - name: Setup Google Cloud SDK
-        uses: mathieu-bour/setup-gcloud@v1.3
+        uses: mathieu-bour/setup-gcloud@1.3.1
         with:
           service-account-key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
           project-id: pure-courier-329320 
