--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -37,7 +37,7 @@ jobs:
         uses: mathieu-bour/setup-gcloud@1.3.1
         with:
           service-account-key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project-id: pure-courier-329320 
+          project: pure-courier-329320 
           configure-docker: true
           
       - name: Upload JAR to Server
