--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -33,12 +33,14 @@ jobs:
       - name: Build Project
         run: mvn -B package -f pom.xml
       
-      - name: Setup Google Cloud SDK
-        uses: mathieu-bour/setup-gcloud@1.3.1
+      - id: auth
+        name: GCloud Authentication
+        uses: google-github-actions/auth@v0
         with:
-          service-account-key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project: pure-courier-329320 
-          configure-docker: true
-          
+          credentials_json: ${{ secrets.GCLOUD_AUTHENTICATION }}
+      
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v0'
+      
       - name: Upload JAR to Server
         run: gcloud compute scp target/EonCore-1.0.jar mceonsurvival@main-server:~/papermc/plugins
