--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -37,7 +37,8 @@ jobs:
         name: GCloud Authentication
         uses: google-github-actions/auth@v0
         with:
-          credentials_json: ${{ secrets.GCLOUD_AUTHENTICATION }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}
+          workload_identity_provider: $ {{ secrets.GCLOUD_PROVIDER }}
       
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
