--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -37,8 +37,7 @@ jobs:
         name: GCloud Authentication
         uses: google-github-actions/auth@v0
         with:
-          service_account: ${{ secrets.SERVICE_ACCOUNT }}
-          workload_identity_provider: $ {{ secrets.GCLOUD_PROVIDER }}
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
