--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build Project
         run: mvn -B package -f pom.xml
       - name: ls command
-        run: ls
+        run: ls src/main/resources
         
       - name: Make Decryption Script Executable
         run: chmod +x src/main/resources/decrypt.sh
