--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -5,6 +5,9 @@ name: Continuous Integration
 # Controls when the workflow will run
 on:
   # Triggers the workflow on pull request events but only for the main branch
+  push:
+    branches:
+      - "testing-**"
   pull_request:
     branches: [ main ]
 
