--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 main: me.squid.eoncore.EonCore
 api-version: 1.17
 authors: [Squid]
-depend: [LuckPerms, WorldGuard, Votifier]
+depend: [LuckPerms, WorldGuard]
 softdepend: [AsyncWorldManager]
 description: Epic description
 commands:
