Added TestCreativeCommand and cleaned up other commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 main: me.squid.eoncore.EonCore
 api-version: 1.17
 authors: [Squid]
-depend: [LuckPerms, Votifier, helper]
+depend: [LuckPerms, Votifier]
 description: Epic description
 commands:
   gmc:
