--- a/pom.xml
+++ b/pom.xml
@@ -126,5 +126,10 @@
             <version>2.43.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 </project>
