--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,9 @@ Welcome-Message: "<blue>Welcome <player> to Eon Survival!! <player> has logged i
 Join-Message: "<gray>[<green><bold>+</green></bold>]</gray> &b<player>"
 Leave-Message: "<gray>[<red><bold>-</red></bold>]</gray> <blue><player>"
 
+# Chat Format
+Chat-Format: "&7["
+
 # Back Message
 No-Back: "There is no location to teleport back to"
 Death-Back-Message: "Do /back to go back to your death location"
@@ -12,7 +15,7 @@ Back-Message: "Teleporting back to your death location"
 
 # Fix Messages
 No-Perm-All-Fix: "You do not have permission to fix all items at once"
-Cooldown-Fix: "You can /fix again in <time>"
+Fix-Cooldown: "You can /fix again in <time>"
 No-Item-Fix: "No item in hand found"
 Success-Fix: "Item repaired!"
 Success-All-Fix: "<amount> items in inventory repaired"
@@ -22,7 +25,7 @@ Clock-Lock: "<hover:show_text:'For more information, do /discord and join for fu
 Clock-Unlock: "<green>Chat is unlocked. You may continue to chat normally. Thank you for your patience!</green>"
 
 # Message Format
-DM-Format: "<hover:show_text:'Click anywhere to reply'><click:copy_to_clipboard:/msg <target>><gray>[<gold><player></gold> -> <gold><target></gold>] >> </gray></hover>"
+DM-Format: "<hover:show_text:'Click anywhere to reply'><click:suggest_command:/msg <target>><gray>[<gold><player></gold> -> <gold><target></gold>] >> </gray></hover>"
 
 # Game-mode Messages
 Survival-Message: "<blue>Survival Time!"
@@ -34,13 +37,10 @@ Heal-Message: "Healed!"
 Heal-Cooldown: "You can /heal again in <time>"
 
 Feed-Message: "You have been fed"
-Feed-Other: "<target> has been fed"
 Feed-Cooldown-Message: "You are on cooldown for /feed"
 
 # Clear Inventory Message
 Clear-Self-Inventory: "Your inventory has been cleared"
-Target-Clear-Inventory: "Your inventory has been cleared"
-Clear-Other-Inventory: "<target> inventory has been cleared"
 
 # Clear Chat Message
 Clear-Chat-Immune: "You are immune to chat clear"
@@ -55,7 +55,6 @@ Discord-Message: "<click:open_url:'https://discord.gg/yGmwHN9Bqj'>https://discor
 # Night Vision Messages
 NV-Message: "Granted Night Vision"
 NV-Off: "Night Vision removed"
-Target-NV-Message: "<target> now has infinite night vision"
 
 # Gamemode Check Messages
 GamemodeCheck-Message: "<green><player> is in <gamemode></green>"
@@ -122,8 +121,9 @@ Warp-Delay: 3
 Warp-Message: "&bTeleporting to <warp>"
 
 # Revive Messages
-Success-Revive-Message: "&bYou have successfully been revived"
-Target-Success-Revive-Message: "You have been successfully revived. Congrats!"
+Success-Revive-Message: "You have successfully been revived"
+Revive-Failure: ""
+Revive-Usage: "Usage: /revive <target>"
 
 # Other Messages
 Reload-Message: "&bSuccessfully reloaded"
