Finished migrating commands to MiniMessage Big commit

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -146,3 +146,6 @@ commands:
   uptime:
     description: Gets the server uptime in a friendly manner
     permission: eoncommands.uptime
+  eonreload:
+    description: Reloads the config
+    permission: eoncommands.eonreload
