--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -20,7 +20,7 @@ jobs:
     env:
       DB_DATABASE: 'test_db'
       DB_USER: 'root'
-      DB_PASSWORD: 'root_password'
+      DB_PASSWORD: 'root'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
