--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,10 @@ jobs:
   deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      DB_DATABASE: 'test_db'
+      DB_USER: 'root'
+      DB_PASSWORD: 'root'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,6 +33,11 @@ jobs:
           java-version: 17
           cache: 'maven'
           distribution: 'zulu'
+
+      - name: Setup MySQL database
+        run: |
+          sudo /etc/init.d/mysql start
+          mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }} 
 
       - name: Build Project
         run: mvn -B package -f pom.xml
